[package]
name = "thatsit-widgets"
version = "0.1.0"
edition = "2021"

[lib]
path = "mod.rs"

[[example]]
name = "thatsit-widgets"
path = "example.rs"

[dependencies]
opt-mod = { git = "https://github.com/egasimus/flatmod" }
thatsit = { git = "https://github.com/egasimus/thatsit" }
pathdiff = "0.2"
